syntax = "proto3";

package user.v1;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  // rpc GetPasskeyIDs (GetPasskeyIDsRequest) returns (GetPasskeyIDsResponse) {}
  // rpc BeginPasskeyLogin (BeginPasskeyLoginRequest) returns (BeginPasskeyLoginResponse) {}
  // rpc FinishPasskeyLogin (FinishPasskeyLoginRequest) returns (FinishPasskeyLoginResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse {
  string token = 1;
}

message SignUpRequest {
  string username = 1;
  string password = 2; 
  string confirm_password = 3;
}
message SignUpResponse {}

message LogoutRequest {}
message LogoutResponse {}

// message GetPasskeyIDsRequest {
//   string username = 1;
// }
// message GetPasskeyIDsResponse {
//   repeated string passkey_ids = 1;
// }

// message BeginPasskeyLoginRequest {}
// message BeginPasskeyLoginResponse {}

// message FinishPasskeyLoginRequest {}
// message FinishPasskeyLoginResponse {}